# QuadraticRootsSolver

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
tests/: test_findroots.cpp
